--- a/app.json
+++ b/app.json
@@ -26,16 +26,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-font",
-      {
-        "fonts": [
-          "./assets/fonts/Rubik-VariableFont_wght.ttf",
-          "./assets/fonts/RubikMonoOne-Regular.ttf"
-        ]
-      }
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     }
